2005-01-27  John Luke  <john.luke@gmail.com>

	* Base.glade: update to newer glade format

	* Commands/ToolsCommands.cs:
	* Commands/FileCommands.cs:
	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	* Gui/Dialogs/CombineConfiguration/CombineStartupPanel.cs:
	* Gui/Dialogs/OptionPanels/IDEOptions/SelectStylePanel.cs:
	* Base.glade:
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyAttribute.cs:
	* Internal/Templates/ProjectTemplates/ProjectTemplate.cs:
	use ComboBox instead of OptioMenu and fix a bunch of little warnings

2005-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/ParserService/CodeCompletionDatabase.cs: Moved classes to
	their own files, which are the following:
	
	* Services/ParserService/AssemblyCodeCompletionDatabase.cs:
	* Services/ParserService/ClassEntry.cs:
	* Services/ParserService/FileEntry.cs:
	* Services/ParserService/NamespaceEntry.cs:
	* Services/ParserService/ProjectCodeCompletionDatabase.cs:
	* Services/ParserService/SimpleCodeCompletionDatabase.cs:
	* Services/ParserService/ReferenceEntry.cs: New files.

2005-01-27  Christian Hergert <chris@mosaix.net>

	* Gui/Pads/HelpBrowser/MonodocTreePad.cs: Fix to use new ShowView in
	DefaultWorkbench.

2005-01-27  John Luke  <john.luke@gmail.com>

	* Makefile.am: 
	* Services/File/RecentOpen.cs:
	* Services/File/DefaultFileService.cs:
	* Gui/BrowserDisplayBinding/BrowserDisplayBinding.cs: use Gnome.Vfs

2005-01-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/IWorkbench.cs:
	* Gui/Workbench/DefaultWorkbench.cs:
	* Services/File/IFileService.cs: 
	* Services/File/DefaultFileService.cs: Added BringToFront parameter
	in OpenFile.
	
	* IProjectService.cs:
	* Services/Project/DefaultProjectService.cs: Return IAsyncOperation
	in OpenCombine, so the load operation can be controlled.
	Use the new BringToFront parameter set to false when opening the
	files of a combine. No more window dances.
	
	* Internal/Templates/ProjectTemplates/ProjectTemplate.cs: Wait for