@@ -1,5 +1,10 @@
 2005-01-27  John Luke  <john.luke@gmail.com>
 
+	* Gui/Dialogs/CommonAboutDialog.cs: use a timeout
+	to make scrolling a more constant speed
+
+2005-01-27  John Luke  <john.luke@gmail.com>
+
 	* Base.glade: update to newer glade format
 
 	* Commands/ToolsCommands.cs:
